--- a/Shopify_Data_Science_Intern_Challenge.ipynb
+++ b/Shopify_Data_Science_Intern_Challenge.ipynb
@@ -72,19 +72,21 @@
         "\n",
         "**NumberOfOrders: 54**\n",
         "\n",
+        "Query:\n",
         "```sql\n",
         "SELECT COUNT(*) AS NumberOfOrders\n",
         "FROM Orders\n",
         "JOIN Shippers\n",
         "ON Shippers.ShipperID = Orders.ShipperID\n",
-        "WHERE Shippers.ShipperName = 'Speedy Express' \n",
+        "WHERE Shippers.ShipperName = 'Speedy Express'\n",
+        "``` \n",
         "\n",
         "\n",
         "- What is the last name of the employee with the most orders?\n",
         "\n",
         "**LastName: Peacock**\n",
         "\n",
-        "\n",
+        "Query:\n",
         "```sql\n",
         "SELECT Employees.LastName, COUNT(*) AS NumberOfOrders\n",
         "FROM Orders\n",
@@ -92,7 +94,8 @@
         "ON Orders.EmployeeID = Employees.EmployeeID\n",
         "GROUP BY Employees.LastName\n",
         "ORDER BY NumberOfOrders DESC\n",
-        "LIMIT 1```\n",
+        "LIMIT 1\n",
+        "```\n",
         "\n",
         "\n",
         "- What product was ordered the most by customers in Germany?\n",
@@ -112,7 +115,8 @@
         "ON Products.ProductID = OrderDetails.ProductID\n",
         "WHERE Customers.Country = 'Germany'\n",
         "GROUP BY OrderDetails.ProductID\n",
-        "ORDER BY totalOrdered DESC ```\n"
+        "ORDER BY totalOrdered DESC\n",
+        "```\n"
       ]
     },
     {
